--- a/circle.html
+++ b/circle.html
@@ -106,6 +106,7 @@
 
 		.btn2:hover {
 			opacity: 100%;
+			z-index: 10;
 		}
 
 		.btn3 {
@@ -896,6 +897,7 @@
 			font-weight: 900;
 			color: brown;
 			margin: 0 auto;
+			transform: translate(-1%, -1%);
 		}
 
 		.circle-container {
@@ -1045,7 +1047,7 @@
 				</div>
 
 				<div class="circle-container">
-					<button class="btn2"></button>
+					<button class="btn2" onclick="window.location.href='https://google.com';"></button>
 					<button class="btn3"></button>
 					<button class="btn4"></button>
 					<button class="btn5"></button>
@@ -1054,7 +1056,6 @@
 					<button class="btn8"></button>
 					<button class="btn9"></button>
 
-					<div style="height: 10500px"></div>
 				</div>
 			</div>
 		</div>
